[gd_scene load_steps=14 format=3 uid="uid://d1qsfyynlbqto"]

[ext_resource type="Script" path="res://Scenes/earth_elemental.gd" id="1_aep0b"]
[ext_resource type="Texture2D" uid="uid://dr8iw0tyxm8nh" path="res://Sprites/stone_golem_spritesheet.png" id="2_tanno"]
[ext_resource type="Texture2D" uid="uid://dnxy2dc6j2tnp" path="res://Sprites/sword placeholder.png" id="3_fpouq"]
[ext_resource type="Script" path="res://Scenes/EnemySwordArea2D.gd" id="5_iwdgx"]
[ext_resource type="Script" path="res://Scenes/HurtBox.gd" id="5_x8rpk"]
[ext_resource type="PackedScene" uid="uid://c7bma6c20vrys" path="res://Scenes/UI/health_bar.tscn" id="6_6liub"]

[sub_resource type="GDScript" id="GDScript_6mckb"]
script/source = "extends Sprite2D



# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(delta: float) -> void:
	#print(\"exists\")
	pass
"

[sub_resource type="RectangleShape2D" id="RectangleShape2D_b6gcs"]
size = Vector2(28, 43)

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_f7sw8"]
radius = 16.0
height = 38.0

[sub_resource type="Animation" id="Animation_ejjal"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_ujb1v"]
resource_name = "idle"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.4),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}

[sub_resource type="Animation" id="Animation_aaccb"]
resource_name = "walk"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:hframes")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D:vframes")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [4]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [12, 23]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0n28j"]
_data = {
"RESET": SubResource("Animation_ejjal"),
"idle": SubResource("Animation_ujb1v"),
"walk": SubResource("Animation_aaccb")
}

[node name="EarthEnemy" type="CharacterBody2D" node_paths=PackedStringArray("attack_timer", "enemy_health_bar")]
z_index = 2
collision_layer = 2
collision_mask = 0
script = ExtResource("1_aep0b")
attack_distance = 35.0
attack_timer = NodePath("AttackTimer")
enemy_health_bar = NodePath("HealthBar")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(0, -28)
texture = ExtResource("2_tanno")
hframes = 12
vframes = 4

[node name="SwordPlaceholder" type="Sprite2D" parent="."]
position = Vector2(22, -12)
rotation = -0.141627
scale = Vector2(0.137545, 0.137546)
texture = ExtResource("3_fpouq")
script = SubResource("GDScript_6mckb")

[node name="SwordArea2D" type="Area2D" parent="SwordPlaceholder"]
collision_layer = 0
script = ExtResource("5_iwdgx")
attack_element = 3

[node name="SwordCollider" type="CollisionPolygon2D" parent="SwordPlaceholder/SwordArea2D"]
polygon = PackedVector2Array(82, -122.4, 82, -111.4, 69.6, -94.2, 83, -47.1, 83, -41.6, 77.3, 17, 74.8, 17, 59.8, 63, 56.8, 63, 23.8, 103, 18.6, 103, -48, 128.7, -48, 112.6, 3.10001, 63.5, 16.3, 6.2, 5.2, -46.6, -11.9, -58.9, -28.4, -47, -35.7, -47, -51.4, -59.2, -49, -66.2, -49, -80, -40.6, -80, 57, -122.2, 62.4728, -131.162)

[node name="HurtBox" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 0
script = ExtResource("5_x8rpk")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="HurtBox"]
position = Vector2(-0.500014, -10)
rotation = 1.57079
scale = Vector2(0.970117, 0.882503)
shape = SubResource("RectangleShape2D_b6gcs")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="HurtBox"]
position = Vector2(0, 5)
scale = Vector2(1.03528, 0.95631)
polygon = PackedVector2Array(-13.5229, -30.3249, 15.4548, -30.3249, 0, -43)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
rotation = 1.5708
shape = SubResource("CapsuleShape2D_f7sw8")

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="AttackCooldownTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="HealthBar" parent="." instance=ExtResource("6_6liub")]
offset_left = -38.0
offset_top = -71.0
offset_right = 39.0
offset_bottom = -66.0
max_value = 5.0
step = 1.0
value = 5.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_0n28j")
}

[connection signal="area_entered" from="SwordPlaceholder/SwordArea2D" to="." method="_on_sword_area_2d_area_entered"]
[connection signal="area_entered" from="SwordPlaceholder/SwordArea2D" to="SwordPlaceholder/SwordArea2D" method="_on_area_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_attack_timer_timeout"]
[connection signal="timeout" from="AttackCooldownTimer" to="." method="_on_attack_cooldown_timer_timeout"]
